--- a/index.html
+++ b/index.html
@@ -14,42 +14,42 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 
 <body>
     <!-- Шапка -->
 
     <header class="header">
-        <div class="container main-nav">
-            <nav class="nav-header">
+        <div class="header__box container">
+            <nav class="header__nav">
                 <!-- Header logo -->
-                <a href="./index.html" class="header-logo"> <span class="logo-web">Web</span><span
-                        class="logo-studio">Studio</span> </a>
+                <a href="./index.html" class="header__logo logo"> <span class="logo__web">Web</span><span
+                        class="logo__studio">Studio</span> </a>
                 <!-- Header nav -->
-                <ul class="header-nav list">
-                    <li class="item-header accent">
+                <ul class="header__menu list">
+                    <li class="header__item accent">
                         <!-- Header studio -->
-                        <a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item-header accent">
+                        <a href="./index.html" class="header__link header__link--current focus">Студия</a></li>
+                    <li class="header__item accent">
                         <!-- Header portfolio -->
-                        <a href="./portfolio.html" class="link">Портфолио</a>
+                        <a href="./portfolio.html" class="header__link">Портфолио</a>
                     </li>
-                    <li class="item-header accent">
+                    <li class="header__item accent">
                         <!-- Header contacts -->
-                        <a href="#" class="link">Контакты</a>
+                        <a href="#" class="header__link">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <!-- Header contacting -->
-            <ul class="header-contacting list">
-                <li class="item-header accent">
-                    <a href="mailto:info@devstudio.com" class="link">
-                        <svg class="icon-mail">
+            <ul class="header__contacting list">
+                <li class="header__item adresses">
+                    <a href="mailto:info@devstudio.com" class="header__link link">
+                        <svg class="header__icon mail">
                             <use href=" ./images/icons.svg#icon-mail"> </use>
                         </svg> info@devstudio.com </a> </li>
-                <li class=" item-header accent">
-                    <a href="tel:+380961111111" class="link">
-                        <svg class="icon-smartphone">
+                <li class="header__item adresses">
+                    <a href="tel:+380961111111" class="header__link link">
+                        <svg class="header__icon tel">
                             <use href="./images/icons.svg#icon-smartphone"> </use>
                         </svg> +38 096 111 11 11</a>
                 </li>
@@ -61,81 +61,82 @@
     <main>
         <!-- Верхня частина -->
 
-        <section class="hero">
-            <div class="container background-hero">
-                <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-                <button type="button" name="Order the service" class="button" data-modal-open>Заказать услугу</button>
+        <section class="section hero">
+            <div class="hero__box container">
+                <h1 class="hero__title">эффективные решения для вашего бизнеса</h1>
+                <button type="button" name="Order the service" class="hero__button" data-modal-open>Заказать
+                    услугу</button>
             </div>
         </section>
 
         <!-- Середина -->
-        <section class="section">
-            <div class="container">
-                <h2 class="section-heading">что мы предлагаем</h2>
-                <ul class="section-block">
-                    <li class="item">
-                        <div class="section-icons">
+        <section class="features section">
+            <div class="features__offer container">
+                <h2 class="visually-hidden">что мы предлагаем</h2>
+                <ul class="features__block">
+                    <li class="features__item">
+                        <div class="features__icons">
                             <svg class="icons" width="70" height="70">
                                 <use href="./images/icons.svg#icon-sattelite" title="sattelite">
                                 </use>
                             </svg>
                         </div>
-                        <h3 class="section-title-second">внимание к деталям</h3>
-                        <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров
+                        <h3 class="features__title">внимание к деталям</h3>
+                        <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за
                             собой.</p>
                     </li>
-                    <li class="item">
-                        <div class="section-icons">
+                    <li class="features__item">
+                        <div class="features__icons">
                             <svg class="icons" width="70" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class=" section-title-second">пунктуальность</h3>
-                        <p class="section-text">
+                        <h3 class="features__title"">пунктуальность</h3>
+                        <p class=" features__text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
-                        </p>
+                            </p>
                     </li>
-                    <li class="item">
-                        <div class="section-icons">
-                            <svg class="icons" width="70" height="70">
-                                <use href="./images/icons.svg#icon-computer"></use>
-                            </svg>
-                        </div>
-                        <h3 class="section-title-second">планирование</h3>
-                        <p class="section-text">Равным образом консультация с широким активом в значительной степени
-                            обуславливает.</p>
-                    </li>
-                    <li class="item">
-                        <div class="section-icons">
-                            <svg class="icons" width="70" height="70">
-                                <use href="./images/icons.svg#icon-cosmonaut"></use>
-                            </svg>
-                        </div>
-                        <h3 class="section-title-second">современные технологии</h3>
-                        <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                            заданий.
-                        </p>
-                    </li>
-                </ul>
+                    <li class="features__item"">
+                        <div class=" features__icons">
+                        <svg class="icons" width="70" height="70">
+                            <use href="./images/icons.svg#icon-computer"></use>
+                        </svg>
             </div>
+            <h3 class="features__title"">планирование</h3>
+            <p class=" features__text">Равным образом консультация с широким активом в значительной степени
+                обуславливает.</p>
+                </li>
+                <li class="features__item">
+                    <div class="features__icons">
+                        <svg class="icons" width="70" height="70">
+                            <use href="./images/icons.svg#icon-cosmonaut"></use>
+                        </svg>
+                    </div>
+                    <h3 class="features__title"">современные технологии</h3>
+                <p class=" features__text">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.
+                        </p>
+                </li>
+                </ul>
+                </div>
         </section>
-        <section class="section secondary-section">
-            <div class="container">
-                <h2 class="section-title">Чем мы занимаемся</h2>
+        <section class="work">
+            <div class="work__box container">
+                <h2 class="work__title">Чем мы занимаемся</h2>
                 <!-- Картинки середини -->
-                <ul class="section-images">
-                    <li class="item section-item-img"><img src="./images/box1.jpg" alt="Десктопные приложения"
-                            width="370px" height="294px">
-                        <p class="section-text-image">Десктопные приложения</p>
+                <ul class="work__list">
+                    <li class="work__img"><img src="./images/box1.jpg" alt="Десктопные приложения" width="370px"
+                            height="294px">
+                        <p class="work__text">Десктопные приложения</p>
                     </li>
-                    <li class="item section-item-img"><img src="./images/box2.jpg" alt="Мобильные приложения"
-                            width="370px" height="294px">
-                        <p class="section-text-image">Мобильные приложения</p>
+                    <li class="work__img"><img src="./images/box2.jpg" alt="Мобильные приложения" width="370px"
+                            height="294px">
+                        <p class="work__text">Мобильные приложения</p>
                     </li>
-                    <li class="item section-item-img"><img src="./images/box3.jpg" alt="Дизайнерские решения"
-                            width="370px" height="294px">
-                        <p class="section-text-image">Дизайнерские решения</p>
+                    <li class="work__img"><img src="./images/box3.jpg" alt="Дизайнерские решения" width="370px"
+                            height="294px">
+                        <p class="work__text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
@@ -430,17 +431,17 @@
     </footer>
 
     <!--  МОДАЛЬНЕ ВІКНО  -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-button" type="button" data-modal-close>
                 <svg class="modal-button-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
-            </button>
+            </button> -->
 
-            <!-- Ф І Д Б Е К  -->
+    <!-- Ф І Д Б Е К  -->
 
-            <div class="feedback">
+    <!-- <div class="feedback">
                 <b class="feedback-title">Оставьте свои данные, мы вам перезвоним</b>
                 <form class="feedback-form">
                     <label class="form-field">
@@ -484,7 +485,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- SCRIPT STYLE -->
 
