--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </ul>
                 </div>
         </section>
-        <section class="work">
+        <section class="work section">
             <div class="work__box container">
                 <h2 class="work__title">Чем мы занимаемся</h2>
                 <!-- Картинки середини -->
@@ -143,43 +143,42 @@
         </section>
 
         <!-- Нижня частина основної сторінки -->
-        <section class="section second-bacground">
-            <div class="container">
-                <h2 class="secondary-title">Наша команда</h2>
-                <ul class="section-down">
-                    <li class="item bcg-item">
-                        <img class="section-photo" src="./images/img1.jpg" alt="Перше фото" width="270px"
-                            height="260px">
-                        <div class="section-secondary-block">
-                            <h3 class="section-name">Игорь Демьяненко</h3>
-                            <p class="section-position">Product Designer</p>
+        <section class="team section">
+            <div class="team__case container">
+                <h2 class="team__title">Наша команда</h2>
+                <ul class="team__list">
+                    <li class="team__item team_background">
+                        <img class="team__photo" src="./images/img1.jpg" alt="Перше фото" width="270px" height="260px">
+                        <div class="team__name">
+                            <h3 class="team__worker">Игорь Демьяненко</h3>
+                            <p class="team__position">Product Designer</p>
                         </div>
 
-                        <ul class="link-list">
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class="web-icon" width="20" height="20">
+                        <ul class="socials">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class="web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class="web-icon" width="20" height="20p">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20p">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class="web-icon" width="20" height="20p">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20p">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -187,114 +186,112 @@
                         </ul>
 
                     </li>
-                    <li class=" item bcg-item">
-                        <img class="section-photo" src="./images/img2.jpg" alt="Друге фото" width="270px"
-                            height="260px">
-                        <div class="section-secondary-block">
-                            <h3 class="section-name">Ольга Репина</h3>
-                            <p class="section-position">Frontend Developer</p>
+                    <li class="team__item team_background">
+                        <img class="team__photo" src="./images/img2.jpg" alt="Друге фото" width="270px" height="260px">
+                        <div class="team__name">
+                            <h3 class="team__worker">Ольга Репина</h3>
+                            <p class="team__position">Frontend Developer</p>
                         </div>
-                        <ul class="link-list">
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                        <ul class="socials">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="item bcg-item">
-                        <img class="section-photo" src="./images/img3.jpg" alt="Третє фото" width="270px"
-                            height="260px">
-                        <div class="section-secondary-block">
-                            <h3 class="section-name">Николай Тарасов</h3>
-                            <p class="section-position">Marketing</p>
+                    <li class="team__item team_background">
+                        <img class="team__photo" src="./images/img3.jpg" alt="Третє фото" width="270px" height="260px">
+                        <div class="team__name">
+                            <h3 class="team__worker">Николай Тарасов</h3>
+                            <p class="team__position">Marketing</p>
                         </div>
-                        <ul class="link-list">
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                        <ul class="socials">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="item bcg-item">
-                        <img class="section-photo" src="./images/img4.jpg" alt="Четверте фото" width="270px"
+                    <li class="team__item team_background">
+                        <img class="team__photo" src="./images/img4.jpg" alt="Четверте фото" width="270px"
                             height="260px">
-                        <div class="section-secondary-block">
-                            <h3 class="section-name">Михаил Ермаков</h3>
-                            <p class="section-position">UI Designer</p>
+                        <div class="team__name">
+                            <h3 class="team__worker">Михаил Ермаков</h3>
+                            <p class="team__position">UI Designer</p>
                         </div>
-                        <ul class="link-list">
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                        <ul class="socials">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="socials">
-                                <a class="soc-in" href="">
-                                    <svg class=" web-icon" width="20" height="20">
+                            <li class="socials__box">
+                                <a class="socials__link selection" href="">
+                                    <svg class="socials__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
