--- a/index.html
+++ b/index.html
@@ -304,43 +304,43 @@
 
         <!-- Постійні клієнти -->
 
-        <section class="clients">
-            <div class="container">
-                <h2 class="clients-title">Постоянные клиенты</h2>
-                <ul class="clients-list">
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+        <section class="clients section">
+            <div class="clients__box container">
+                <h2 class="clients__title">Постоянные клиенты</h2>
+                <ul class="clients__list">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo1"></use>
                             </svg></a>
                     </li>
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo2"></use>
                             </svg></a>
                     </li>
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo3"></use>
                             </svg></a>
                     </li>
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo4"></use>
                             </svg></a>
                     </li>
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo5"></use>
                             </svg></a>
                     </li>
-                    <li class="client-icons">
-                        <a class="client-icon-link" href="">
-                            <svg class="client-names" width="106" height="60">
+                    <li class="clients__icons">
+                        <a class="clients__link" href="">
+                            <svg class="clients__names" width="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo6"></use>
                             </svg></a>
                     </li>
