--- a/index.html
+++ b/index.html
@@ -352,47 +352,50 @@
     <!-- Підвал сторінки -->
 
     <footer class=" footer">
-        <div class="container footer-main">
-            <div class="down-main">
-                <a href="./index.html" class="footer-logo"><span class="logo-web-footer">Web</span><span
-                        class="logo-studio-footer">Studio</span></a>
+        <div class="container footer__box">
+            <div class="footer__main">
+                <a href="./index.html" class="footer__logo"><span class="logo__web">Web</span><span
+                        class="logo__studio footer__logo--white">Studio</span></a>
                 <!-- Адреса і реквізити пошти і контактування -->
-                <adress class="adress">
+                <adress class="footer__adress">
                     <ul>
-                        <li class="adress-item"><a href="#" class="adr">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="adress-item"><a href="mailto:info@example.com" class="link">info@example.com</a>
+                        <li class="footer__item"><a href="#" class="footer__item--adr">г. Киев, пр-т Леси Украинки,
+                                26</a></li>
+                        <li class="footer__item"><a href="mailto:info@example.com"
+                                class="footer__item--link">info@example.com</a>
                         </li>
-                        <li class="adress-item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+                        <li class="footer__item"><a href="tel:+380991111111" class="footer__item--link">+38 099 111 11
+                                11</a></li>
                     </ul>
                 </adress>
             </div>
-            <div class="footer-second">
-                <h3 class="footer-link-item">присоединяйтесь</h3>
-                <ul class="footer-link-list">
-                    <li class="footer-socials">
-                        <a class="footer-soc-in" href="">
-                            <svg class="footer-web-icon" width="20px" height="20px">
+            <div class="join">
+                <h3 class="join__item">присоединяйтесь</h3>
+                <ul class="join__list">
+                    <li class="join__socials">
+                        <a class="join__link" href="">
+                            <svg class="join__icon join__link--accent" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-socials">
-                        <a class="footer-soc-in" href="">
-                            <svg class="footer-web-icon" width="20px" height="20px">
+                    <li class="join__socials">
+                        <a class="join__link" href="">
+                            <svg class="join__icon join__link--accent" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-socials">
-                        <a class="footer-soc-in" href="">
-                            <svg class="footer-web-icon" width="20px" height="20px">
+                    <li class="join__socials">
+                        <a class="join__link" href="">
+                            <svg class="join__icon join__link--accent" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-socials">
-                        <a class="footer-soc-in" href="">
-                            <svg class="footer-web-icon" width="20px" height="20px">
+                    <li class="join__socials">
+                        <a class="join__link" href="">
+                            <svg class="join__icon join__link--accent" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -404,18 +407,17 @@
 
             <div class="signup">
 
-                <span class="signup-text">Подпишитесь на рассылку</span>
+                <span class="signup__text">Подпишитесь на рассылку</span>
 
-                <form class="signup-form">
-                    <label class="signup-label">
-                        <div class="signup-box">
-                            <input class="signup-input" type="email" name="email" placeholder="E-mail"
-                                class="signup-input" required />
+                <form class="signup__form">
+                    <label class="signup__label">
+                        <div class="signup__box">
+                            <input class="signup__input" type="email" name="email" placeholder="E-mail" required />
                     </label>
 
-                    <button type="submit" class="signup-button">
-                        <span class="signature">Подписаться</span>
-                        <svg width="24" height="24" class="signup-icon">
+                    <button type="submit" class="signup__button">
+                        <span class="signup__signature">Подписаться</span>
+                        <svg width="24" height="24" class="signup__icon">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
@@ -427,49 +429,50 @@
 
     </footer>
 
-    <!--  МОДАЛЬНЕ ВІКНО  -->
-    <!-- <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-            <button class="modal-button" type="button" data-modal-close>
-                <svg class="modal-button-icon" width="18" height="18">
+    <!-- МОДАЛЬНЕ ВІКНО  -->
+    <div class="modal is-hidden" data-modal>
+        <div class="modal__box">
+            <button class="modal__button" type="button" data-modal-close>
+                <svg class="modal__icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
-            </button> -->
+            </button>
 
-    <!-- Ф І Д Б Е К  -->
+            <!-- Ф І Д Б Е К  -->
 
-    <!-- <div class="feedback">
-                <b class="feedback-title">Оставьте свои данные, мы вам перезвоним</b>
-                <form class="feedback-form">
-                    <label class="form-field">
-                        <span class="feedback-label">Имя</span>
-                        <input type="text" name="user-name" class="feedback-input" required />
-                        <svg class="form-field-icon" width="18" height="18">
+            <div class="feedback">
+                <b class="feedback__title">Оставьте свои данные, мы вам перезвоним</b>
+                <form class="feedback__form">
+                    <label class="feedback__field">
+                        <span class="feedback__label">Имя</span>
+                        <input type="text" name="user-name" class="feedback__input" required />
+                        <svg class="feedback__icon feedback__field--accent" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </label>
-                    <label class="form-field">
-                        <span class="feedback-label">Телефон</span>
-                        <input type="tel" name="user-tel" class="feedback-input" required />
-                        <svg class="form-field-icon" width="18" height="18">
+                    <label class="feedback__field">
+                        <span class="feedback__label">Телефон</span>
+                        <input type="tel" name="user-tel" class="feedback__input" required />
+                        <svg class="feedback__icon feedback__field--accent" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </label>
-                    <label class="form-field">
-                        <span class="feedback-label">Почта</span>
-                        <input type="email" name="user-mail" class="feedback-input" required />
-                        <svg class="form-field-icon" width="18" height="18">
+                    <label class="feedback__field">
+                        <span class="feedback__label">Почта</span>
+                        <input type="email" name="user-mail" class="feedback__input" required />
+                        <svg class="feedback__icon feedback__field--accent" width="18" height="18">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
                     </label>
-                    <label class="comment-field">
-                        <span class="feedback-label">Комментарий</span>
-                        <textarea class="feedback-text" name="user-comment" placeholder="Введите текст"></textarea>
+                    <label class="feedback__field--comment">
+                        <span class="feedback__label">Комментарий</span>
+                        <textarea class="feedback__text" name="user-comment" placeholder="Введите текст"></textarea>
                     </label>
 
-                    <label class="policy-field">
-                        <input class="check-box invisible" type="checkbox" name="accept-policy" required />
-                        <span class="icon-policy">
+                    <label class="feedback__field--policy">
+                        <input class="feedback__checkbox feedback__checkbox--iconpolicy invisible" type="checkbox"
+                            name="accept-policy" required />
+                        <span class="feedback__iconpolicy feedback__checkbox--checked">
                             <svg class="check-icon" width="11" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
@@ -482,7 +485,7 @@
                 </form>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- SCRIPT STYLE -->
 
