--- a/portfolio.html
+++ b/portfolio.html
@@ -61,171 +61,178 @@
     <!-- Головна частина сторінки -->
     <main>
 
-        <section class="section-portfolio">
+        <section class="portfolio">
             <div class="container">
                 <h1 class="portfolio-title">Кейси команди</h1>
-                <ul class="button-portfolio">
-                    <li class="item"><button type="button" name="All Products" class="btn">Все</button></li>
-                    <li class="item"><button type="button" name="Web Sites" class="btn">Веб-сайты</button></li>
-                    <li class="item"><button type="button" name="Aplications" class="btn">Приложения</button></li>
-                    <li class="item"><button type="button" name="Design" class="btn">Дизайн</li>
-                    <li class="item"><button type="button" name="Marketing" class="btn">Маркетинг</button></li>
+                <ul class="portfolio__btnlist">
+                    <li class="portfolio__item"><button type="button" name="All Products"
+                            class="portfolio__btn">Все</button></li>
+                    <li class="portfolio__item"><button type="button" name="Web Sites"
+                            class="portfolio__btn">Веб-сайты</button>
+                    </li>
+                    <li class="portfolio__item"><button type="button" name="Aplications"
+                            class="portfolio__btn">Приложения</button>
+                    </li>
+                    <li class="portfolio__item"><button type="button" name="Design" class="portfolio__btn">Дизайн</li>
+                    <li class="portfolio__item"><button type="button" name="Marketing"
+                            class="portfolio__btn">Маркетинг</button>
+                    </li>
 
                 </ul>
 
                 <!-- Список виконаних кейсів команди  -->
 
                 <ul class="cases">
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio1.jpg" alt="Технокряк" width="370px"
+                                <img class="cases__img" src="./images/portfolio1.jpg" alt="Технокряк" width="370px"
                                     height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Технокряк</h2>
-                                <p class="case-text">Веб-сайт</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Технокряк</h2>
+                                <p class="cases__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio2.jpg"
+                                <img class="cases__img" src="./images/portfolio2.jpg"
                                     alt="Постер New Orlean vs Golden Star" width="370px" height="294px">
                             </div>
                             <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="case-text">Дизайн</p>
+                                <h2 class="cases__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="case__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio3.jpg" alt="Ресторан Seafood"
+                                <img class="cases__img" src="./images/portfolio3.jpg" alt="Ресторан Seafood"
                                     width="370px" height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Ресторан Seafood</h2>
-                                <p class="case-text">Приложение</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Ресторан Seafood</h2>
+                                <p class="case__text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio4.jpg" alt="Проект Prime" width="370px"
+                                <img class="cases__img" src="./images/portfolio4.jpg" alt="Проект Prime" width="370px"
                                     height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Проект Prime</h2>
-                                <p class="case-text">Маркетинг</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Проект Prime</h2>
+                                <p class="cases__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio5.jpg" alt="Проект Boxes" width="370px"
+                                <img class="cases__img" src="./images/portfolio5.jpg" alt="Проект Boxes" width="370px"
                                     height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Проект Boxes</h2>
-                                <p class="case-text">Приложение</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Проект Boxes</h2>
+                                <p class="cases__text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio6.jpg" alt="Inspiration has no Borders"
+                                <img class="cases__img" src="./images/portfolio6.jpg" alt="Inspiration has no Borders"
                                     width="370px" height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Inspiration has no Borders</h2>
-                                <p class="case-text">Веб-сайт</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Inspiration has no Borders</h2>
+                                <p class="cases__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio7.jpg" alt="Издание Limited Edition"
+                                <img class="cases__img" src="./images/portfolio7.jpg" alt="Издание Limited Edition"
                                     width="370px" height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Издание Limited Edition</h2>
-                                <p class="case-text">Дизайн</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Издание Limited Edition</h2>
+                                <p class="cases__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio8.jpg" alt="Проект LAB" width="370px"
+                                <img class="cases__img" src="./images/portfolio8.jpg" alt="Проект LAB" width="370px"
                                     height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Проект LAB</h2>
-                                <p class="case-text">Маркетинг</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Проект LAB</h2>
+                                <p class="cases__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cases-items">
-                        <a class="cases-link-items" href="">
-                            <div class="cases-img-thumb">
-                                <p class="overlay">
+                    <li class="cases__items">
+                        <a class="cases__link" href="">
+                            <div class="cases__thumb">
+                                <p class="cases__overlay">
                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                                     или частном лице.
                                 </p>
-                                <img class="cases-img" src="./images/portfolio9.jpg" alt="Growing Business"
+                                <img class="cases__img" src="./images/portfolio9.jpg" alt="Growing Business"
                                     width="370px" height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
-                                <h2 class="cases-title">Growing Business</h2>
-                                <p class="case-text">Приложение</p>
+                            <div class="cases__block">
+                                <h2 class="cases__title">Growing Business</h2>
+                                <p class="cases__text">Приложение</p>
                             </div>
                         </a>
                     </li>
