--- a/portfolio.html
+++ b/portfolio.html
@@ -111,9 +111,9 @@
                                 <img class="cases__img" src="./images/portfolio2.jpg"
                                     alt="Постер New Orlean vs Golden Star" width="370px" height="294px">
                             </div>
-                            <div class="cases-block-portfolio">
+                            <div class="cases__block">
                                 <h2 class="cases__title">Постер New Orlean vs Golden Star</h2>
-                                <p class="case__text">Дизайн</p>
+                                <p class="cases__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="cases__block">
                                 <h2 class="cases__title">Ресторан Seafood</h2>
-                                <p class="case__text">Приложение</p>
+                                <p class="cases__text">Приложение</p>
                             </div>
                         </a>
                     </li>
